Fixed some overflow errors

--- a/RoadTrip/css/jquery.css
+++ b/RoadTrip/css/jquery.css
@@ -1,3 +1,3 @@
 ﻿@import url(jquery-ui-1.8.16.custom.css);
 
-.ui-dialog .ui-dialog-titlebar { display: none; }
+.alert .ui-dialog-titlebar { display: none; }
